[package]
name = "lean-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
console-subscriber = "0.4.1"
derive_more = { version = "2.0.1", features = ["constructor", "from"] }
mkutils = { git = "https://github.com/mkxl/mkutils-rs", rev = "8d7ea6656839e216fe01424c8c5e6760a98e6b40", version = "0.1.0" }
poem = { git = "https://github.com/0xb002f0/poem", version = "3.1.12", features = ["anyhow", "websocket"], rev = "70ee9a70f335c5961f12e290706fc89ddb1f54e7" }
poem-openapi = { git = "https://github.com/0xb002f0/poem", version = "5.1.16", features = ["ulid", "websocket"], rev = "70ee9a70f335c5961f12e290706fc89ddb1f54e7" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { git = "https://github.com/mkxl/serde-json", version = "1.0.144" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.20", features = ["json", "valuable"] }
ulid = { version = "1.2.1", features = ["serde"] }
valuable = "0.1.1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unit_arg = "allow"
