[package]
name = "lean-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
console-subscriber = "0.4.1"
derive_more = { version = "2.0.1", features = ["constructor", "display", "from"] }
futures = "0.3.31"
mkutils = { version = "0.1.0", git = "https://github.com/mkxl/mkutils-rs", rev = "67171647960b62d424b7376ace02497b9832c3e0" }
poem = { git = "https://github.com/poem-web/poem", version = "3.1.12", features = ["anyhow", "websocket"], branch = "master" }
poem-openapi = { git = "https://github.com/poem-web/poem", version = "5.1.16", features = ["ulid", "websocket"], branch = "master" }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.20", features = ["json", "valuable"] }
ulid = { version = "1.2.1", features = ["serde"] }
valuable = "0.1.1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unit_arg = "allow"
